# mac_tmp

PycharmProjects/overseas_chinese_engine/: CMakeLists.txt  README  main.cpp
PycharmProjects/overseas_chinese_engine/android/: CMakeLists.txt  OverseasChineseEngineJni.cpp  OverseasChineseEngineJni.h
PycharmProjects/overseas_chinese_engine/core/: CMakeLists.txt  KeyboardMng.cpp  KeyboardMng.h  KeyboardTypeBase.cpp  KeyboardTypeBase.h  OverseasChineseEngineIME.cpp  OverseasChineseEngineIME.h  SearchResultsMng.cpp  SearchResultsMng.h
PycharmProjects/overseas_chinese_engine/core/common/include/: BasicTypeDef.h  KeyMapping.h  Log.h  Utf16Char.h  Utils.h  utf16writer.h
PycharmProjects/overseas_chinese_engine/core/common/src/: KeyMapping.cpp  Utf16Char.cpp  Utils.cpp  utf16writer.cpp
PycharmProjects/overseas_chinese_engine/core/makeDict/include/: DictInfo.h  FreqConvertScore.h  MakeBinDict.h
PycharmProjects/overseas_chinese_engine/core/makeDict/src/: FreqConvertScore.cpp  MakeBinDict.cpp
PycharmProjects/overseas_chinese_engine/core/parseDict/include/: ParseBinDict.h
PycharmProjects/overseas_chinese_engine/core/parseDict/src/: ParseBinDict.cpp
PycharmProjects/overseas_chinese_engine/core/predict/: NextWordDicTree.cpp  NextWordDicTree.h  Predict.h  PredictProcess.cpp  PredictProcess.h
PycharmProjects/overseas_chinese_engine/core/testBatch/: TestBatch.cpp  TestBatch.h
PycharmProjects/overseas_chinese_engine/data/: bihua_letter_map.txt  bihua_simp.dict  bihua_trad.dict  cangjie_letter_map.txt  pinyin_9key.dict  predict_2w.txt  predict_simp.dict  predict_trad.dict  zhuyin.dict  zhuyin_9key.dict  zhuyin_letter_map.txt
PycharmProjects/overseas_chinese_engine/platform/huawei_secure_c/: CMakeLists.txt
PycharmProjects/overseas_chinese_engine/resources/: ChangJie20130326.txt  Chinese_CN.txt  Chinese_HK.txt  Chinese_HK_CN.txt  Chinese_TW.txt
PycharmProjects/overseas_chinese_engine/resources/Zhuyin/: wordTone1.txt  word_1.txt  zhuyin20120425_2.txt  zhuyin20120425_3.txt  zhuyin20120425_4.txt  zhuyinTone20120425_2.txt  zhuyinTone20120425_3.txt  zhuyinTone20120425_4.txt
PycharmProjects/overseas_chinese_engine/test_batch/: main.cpp
PycharmProjects/overseas_chinese_engine/testcase/: bihua_newdic.txt  bihua_newdic_out.txt  bihua_rawdic.txt  bihua_rawdic_out.txt  cangjie_fast_newdic.txt  cangjie_newdic.txt  cangjie_newdic_out.txt  cangjie_rawdic.txt  nextword_newdic.txt  nextword_trad_newdic.txt  pinyin26_newdic.txt  pinyin26_rawdic.txt  pinyin26_rawdic_out.txt  pinyin26_testcaseV1.txt  pinyin26_testcaseV1_out.txt  pinyin9_newdic.txt  pinyin9_rawdic.txt  pinyin9_testcaseV1.txt  pinyin9_testcaseV1_out.txt  predict_2w.txt  zhuyin26_withTone_testcaseV1.txt  zhuyin26_withoutTone_testcaseV1.txt  zhuyin26_withouttone_newdic.txt  zhuyin26_withouttone_newdic_out.txt  zhuyin26_withouttone_rawdic.txt  zhuyin26_withtone_newdic.txt  zhuyin26_withtone_newdic_out.txt  zhuyin26_withtone_rawdic.txt  zhuyin9_newdic.txt  zhuyin9_rawdic.txt
PycharmProjects/overseas_chinese_engine/third_part/: CMakeLists.txt
PycharmProjects/overseas_chinese_engine/third_part/darts/: CMakeLists.txt  mkdarts.cpp
PycharmProjects/overseas_chinese_engine/tools/: CMakeLists.txt  MakeDict_Main.cpp  test_darts.cc
PycharmProjects/overseas_chinese_engine/unit_test/: CMakeLists.txt  EngineBaseTest.cpp  EngineBaseTest.h  PredictTest.cpp  bihua_unittest.cpp  cangjie_unittest.cpp  core_unittest.cpp  makeDict_unittest.cpp  parseDict_unittest.cpp  predict_unittest.cpp  zhuyin_unittest.cpp  zhuyinfilter_unittest.cpp
c++ Projects/cg-learnOpenGl_CN/: CMakeLists.txt  Shader.cpp  Shader.h  VertexData.cpp  VertexData.h  main.cpp
c++ Projects/cg-learnOpenGl_CN/res/shader/1_triangle/: fragment.glsl
c++ Projects/cg-learnOpenGl_CN/res/shader/2_rectangle/: fragment.glsl
c++ Projects/cg-learnOpenGl_CN/res/shader/3_triangle/: vertex.glsl
c++ Projects/cg-learnOpenGl_CN/res/shader/4_triangle/: fragment.glsl
c++ Projects/cg-learnOpenGl_CN/res/shader/5_rectangle/: fragment.glsl  vertex.glsl
c++ Projects/cg-learnOpenGl_CN/res/shader/6_rectangle/: fragment.glsl
c++ Projects/cg-learnOpenGl_CN/res/shader/7_rectangle/: fragment.glsl
c++ Projects/cg-learnOpenGl_CN/res/shader/8_rectangle/: vertex.glsl
c++ Projects/cg-learnOpenGl_CN/res/vertex.attr/1_triangle/: pos.va
c++ Projects/cg-learnOpenGl_CN/res/vertex.attr/2_rectangle/: pos.va
c++ Projects/cg-learnOpenGl_CN/res/vertex.attr/4_triangle/: indices.va  pos_color.va
c++ Projects/cg-learnOpenGl_CN/res/vertex.attr/5_rectangle/: indices.va
c++ Projects/cg-learnOpenGl_CN/res/vertex.attr/6_rectangle/: pos_color_texture.va
c++ Projects/cg-learnOpenGl_CN/res/vertex.attr/7_rectangle/: pos_color_texture.va
c++ Projects/cg-learnOpenGl_CN/res/vertex.attr/8_rectangle/: pos_color_texture.va
c++ Projects/cg-learnOpenGl_CN/third-part/glad/src/: glad.c
c++ Projects/cg-learnOpenGl_CN/third-part/glfw-3.3.8/lib/: Makefile  cmake_install.cmake  glfw3.pc  glfw3ConfigVersion.cmake  libglfw.3.3.dylib
c++ Projects/cg-learnOpenGl_CN/third-part/soil-1.07/lib/: libSOIL.1.dylib
c++ Projects/design_mode/对象创建模式/factory_method/: CMakeLists.txt  main.cpp
c++ Projects/design_mode/对象创建模式/factory_method/Application/: BinSplitter.cpp  BinSplitter.h  BinSplitterFactory.cpp  BinSplitterFactory.h  SplitProcess.h  TxtSplitter.cpp  TxtSplitter.h  TxtSplitterFactory.cpp  TxtSplitterFactory.h
c++ Projects/design_mode/对象创建模式/factory_method/Framework/: ISplitterFactory.h  Splitter.h
c++ Projects/design_mode/对象创建模式/prototype/: CMakeLists.txt  SplitProcess.cpp  SplitProcess.h  main.cpp
c++ Projects/design_mode/对象创建模式/prototype/Application/: BinPrototype.cpp  BinPrototype.h  TxtPrototype.cpp  TxtPrototype.h
c++ Projects/design_mode/对象创建模式/prototype/Framework/: IProtoType.h
c++ Projects/design_mode/组件协作/observer/: CMakeLists.txt  main.cpp
c++ Projects/design_mode/组件协作/observer/Application/: ConcreteSubject.cpp  ConcreteSubject.h  ConsoleLogObserver.cpp  ConsoleLogObserver.h  FileLogObserver.cpp  FileLogObserver.h
c++ Projects/design_mode/组件协作/observer/Framework/: CMakeLists.txt  IObserver.h  (+2 more)
(+217 files in other folders)
